amoeba-k8s/k8s/ingress/amoeba_backend_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amoeba-backend-ingress
  namespace: amoeba-go
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: amoeba-go-service
              port:
                number: 80
